# AI-Call-Agent-

./: ARCHITECTURE.md  DEPLOYMENT.md  Makefile  PROJECT_SUMMARY.md  README.md  README_Enhanced.md  Untitled-1.ipynb  app.py  assistant.py  punkt_downloader.py  pyproject.toml  requirement.txt  requirements.txt  requirements_enhanced.txt  setup_enhanced.sh  start.sh  test_system.py  web_interface.html
src/: api_service.py  config.py  intent_recognition.py  llama_finetuning.py  llama_intent_recognition.py  main.py  navigation.py  speech_to_text.py  text_to_speech.py  ui_parser.py  vehicle_control.py
