[tool.poetry]
name = "AI-Call-Agent"
version = "1.0.0"
description = "AI Call Agent for Autonomous Campus Shuttle"
authors = ["AI Team <team@aicall.agent>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<3.12"
# Core dependencies
requests = "^2.31.0"
rich = "^13.7.1"
# AI/ML dependencies
torch = "^2.2.1"
openai-whisper = {git = "https://github.com/openai/whisper.git"}
transformers = "^4.36.0"
# Audio dependencies
sounddevice = "^0.4.6"
speechrecognition = "^3.10.1"
pyaudio = "^0.2.14"
# NLP dependencies
nltk = "^3.8.1"
# Optional LLM integration
langchain = "^0.1.13"
langchain-community = "^0.0.20"
# Utility dependencies
numpy = "^1.24.0"
typing-extensions = "^4.8.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
